--- a/lecture1.html
+++ b/lecture1.html
@@ -15,7 +15,7 @@
                 <li><a href="lecture2.html" class="text-blue-400">Lecture 2</a></li>
                 <li><a href="lecture3.html" class="text-blue-400">Lecture 3</a></li>
                 <li><a href="lecture4.html" class="text-blue-400">Lecture 4</a></li>
-                <li><a href="contact.html" class="text-blue-400">Contact</a></li>
+                <li><a href="lecture5.html" class="text-blue-400">Lecture 5</a></li>
             </ul>
         </nav>
         <h1>Lecture 1: Introduction to AI and ML</h1>
