--- a/lecture4.html
+++ b/lecture4.html
@@ -15,7 +15,7 @@
                 <li><a href="lecture1.html" class="text-blue-400">Lecture 1</a></li>
                 <li><a href="lecture2.html" class="text-blue-400">Lecture 2</a></li>
                 <li><a href="lecture3.html" class="text-blue-400">Lecture 3</a></li>
-                <li><a href="contact.html" class="text-blue-400">Contact</a></li>
+                <li><a href="lecture5.html" class="text-blue-400">Lecture 5</a></li>
             </ul>
         </nav>
         <h1>Lecture 4: Practical Applications and Ethical Considerations</h1>
