--- a/lecture1.html
+++ b/lecture1.html
@@ -50,6 +50,9 @@
             <h2>Next Lecture Preview</h2>
             <p>In our next session, we will focus on "Types of Machine Learning." We will explore various algorithms, their uses, and how they differ from each other, providing you with a clearer understanding of when and why certain algorithms are used in real-world scenarios.</p>
         </section>
+        <div class="images-section-small">
+            <img src="./images/peterson2.png" alt="AI imagined graph 2" class="lecture-image">
+        </div>
     </main>
     <footer class="bg-gray-800 text-white p-4 text-center">
         © 2024 Standard Testing <a href="http://standardtesting.io" class="text-blue-400 hover:text-blue-700" target="_blank">standardtesting.io</a>
