--- a/schedule.html
+++ b/schedule.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="styles.css">
     <title>Lecture Series Schedule</title>
 </head>
+
 <body>
     <header class="bg-gray-800 text-white p-4">
         <nav>
@@ -41,11 +43,21 @@
                 <h3 class="text-md font-semibold">Week 4: Practical Applications and Ethical Considerations</h3>
                 <a href="lecture4.html" class="text-blue-500 hover:text-blue-700">View Details</a>
             </div>
+            <!-- Week 5 -->
+            <div class="bg-white shadow-md rounded-lg p-4">
+                <h3 class="text-md font-semibold">Week 5: Introduction to Character-Level Language Modeling with PyTorch</h3>
+                <a href="lecture5.html" class="text-blue-500 hover:text-blue-700">View Details</a>
+            </div>
             <!-- More weeks can be added in similar fashion -->
+        </div>
+        <div class="images-section-small">
+            <img src="./images/peterson1.png" alt="AI imagined graph 1" class="lecture-image">
         </div>
     </main>
     <footer class="bg-gray-800 text-white p-4 text-center">
-        © 2024 Standard Testing <a href="http://standardtesting.io" class="text-blue-400 hover:text-blue-700" target="_blank">standardtesting.io</a>
+        © 2024 Standard Testing <a href="http://standardtesting.io" class="text-blue-400 hover:text-blue-700"
+            target="_blank">standardtesting.io</a>
     </footer>
 </body>
+
 </html>
