--- a/schedule.html
+++ b/schedule.html
@@ -40,13 +40,20 @@
             </div>
             <!-- Week 4 -->
             <div class="bg-white shadow-md rounded-lg p-4">
-                <h3 class="text-md font-semibold">Week 4: Practical Applications and Ethical Considerations</h3>
+                <h3 class="text-md font-semibold">Week 4: Machine Learning for Sequence Prediction</h3>
                 <a href="lecture4.html" class="text-blue-500 hover:text-blue-700">View Details</a>
             </div>
             <!-- Week 5 -->
             <div class="bg-white shadow-md rounded-lg p-4">
-                <h3 class="text-md font-semibold">Week 5: Introduction to Character-Level Language Modeling with PyTorch</h3>
+                <h3 class="text-md font-semibold">Week 5: Bigrams in Sequence Prediction
+                </h3>
                 <a href="lecture5.html" class="text-blue-500 hover:text-blue-700">View Details</a>
+            </div>
+            <!-- Week 6 -->
+            <div class="bg-white shadow-md rounded-lg p-4">
+                <h3 class="text-md font-semibold">Week 6: Introduction to Character-Level Language Modeling with PyTorch
+                </h3>
+                <a href="lecture6.html" class="text-blue-500 hover:text-blue-700">View Details</a>
             </div>
             <!-- More weeks can be added in similar fashion -->
         </div>
