--- a/lecture2.html
+++ b/lecture2.html
@@ -16,6 +16,7 @@
                 <li><a href="lecture3.html" class="text-blue-400">Lecture 3</a></li>
                 <li><a href="lecture4.html" class="text-blue-400">Lecture 4</a></li>
                 <li><a href="lecture5.html" class="text-blue-400">Lecture 5</a></li>
+                <li><a href="lecture6.html" class="text-blue-400">Lecture 6</a></li>
             </ul>
         </nav>
         <h1>Lecture 2: Types of Machine Learning</h1>
