added lectures and graphics

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <p>Join us as we explore the fascinating world of machine learning and AI, from the basics to the latest advancements.</p>
             <!-- Images Section -->
             <div class="images-section">
-                <img src="./images/grahs-1.png" alt="Complex Network Visualization 1" class="lecture-image">
+                <img src="./images/dog_name_predictor.png" alt="Dog Name Predictor" class="lecture-image">
             </div>
         </section>
     </main>
