--- a/lecture5.html
+++ b/lecture5.html
@@ -72,7 +72,11 @@
                 <h2>Conclusion</h2>
                 <p>Bigrams are a fundamental tool in predictive modeling for sequences, particularly effective in text-related tasks within natural language processing. They provide a balance between simplicity and effectiveness, making them a popular choice in situations where complex dependencies are less critical, or computational resources are limited. However, for tasks requiring a deeper understanding of context or longer-range dependencies, more sophisticated approaches may be required.</p>
             </section>
+            <div class="images-section">
+                <img src="./images/thenextdogname.png" alt="AI imagined graph 2" class="lecture-image">
+            </div>
         </main>
+
         <footer class="bg-gray-800 text-white p-4 text-center">
             © 2024 Standard Testing <a href="http://standardtesting.io" class="text-blue-400 hover:text-blue-700" target="_blank">standardtesting.io</a>
         </footer>
