add python cde example page

--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
         </section>
     </main>
     <footer class="bg-gray-800 text-white p-4 text-center">
-        <p>© 2024 Standard Testing</p>
         <p>Follow us on Twitter: <a href="https://twitter.com/StandardTesting" class="text-blue-400 hover:text-blue-700" target="_blank">@StandardTesting</a></p>
-        <p>Questions? Visit our website: <a href="http://standardtesting.io" class="text-blue-400 hover:text-blue-700" target="_blank">standardtesting.io</a></p>
+        <p>Visit our website: <a href="http://standardtesting.io" class="text-blue-400 hover:text-blue-700" target="_blank">standardtesting.io</a></p>
     </footer>
 </body>
 </html>
+
