add links and remove copyright

--- a/lecture6.html
+++ b/lecture6.html
@@ -42,7 +42,7 @@
         </section>
     </main>
     <footer class="bg-gray-800 text-white p-4 text-center">
-        © 2024 Standard Testing <a href="http://standardtesting.io" class="text-blue-400 hover:text-blue-700" target="_blank">standardtesting.io</a>
+         <a href="http://standardtesting.io" class="text-blue-400 hover:text-blue-700" target="_blank">standardtesting.io</a>
     </footer>
 </body>
 </html>
