--- a/lecture1.html
+++ b/lecture1.html
@@ -43,20 +43,23 @@
             <p>Transfer Learning: LLMs are often pre-trained on general tasks and then fine-tuned for specific applications. This is an example of transfer learning, where a model developed for one task is reused as the starting point for a model on a second task.</p>
             <p>Scaling and Performance: The performance of language models generally improves with an increasing amount of training data and model size, highlighting ML principles like feature representation and model capacity.</p>
         </section>
+        <section>
             <h3>Differences Between AI and ML</h3>
             <p>While AI is a broader concept concerning creating machines capable of performing tasks that seem intelligent, ML is a specific subset of AI that trains a machine how to learn. ML is one way to achieve AI.</p>
-        <section>
-            <h2>Conclusion</h2>
-            <p>Today’s lecture has set the stage by introducing the core concepts and distinctions within AI and ML. As we proceed in this series, we will delve deeper into specific algorithms, their implementations, and more sophisticated applications. Understanding these basics is crucial for anyone looking to navigate the fields of AI and ML, whether as a student, researcher, or enthusiast.</p>
-            <h2>Next Lecture Preview</h2>
-            <p>In our next session, we will focus on "Types of Machine Learning." We will explore various algorithms, their uses, and how they differ from each other, providing you with a clearer understanding of when and why certain algorithms are used in real-world scenarios.</p>
         </section>
         <div class="images-section-small">
             <img src="./images/peterson2.png" alt="AI imagined graph 2" class="lecture-image">
         </div>
+        <section class="additional-materials">
+            <h2>Additional Materials</h2>
+            <ul>
+                <li><a href="https://www.youtube.com/watch?v=OQQ-W_63UgQ">
+                    Stanford University School of Engineering 2017</a> - Lecture 1 | Natural Language Processing with Deep Learning: A foundational lecture on Natural Language Processing which serves as the start of the story we want to explore.  </li>
+            </ul>
+        </section>
     </main>
     <footer class="bg-gray-800 text-white p-4 text-center">
-        © 2024 Standard Testing <a href="http://standardtesting.io" class="text-blue-400 hover:text-blue-700" target="_blank">standardtesting.io</a>
+        <a href="http://standardtesting.io" class="text-blue-400 hover:text-blue-700" target="_blank">standardtesting.io</a>
     </footer>
 </body>
 </html>
