--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </main>
     <footer class="bg-gray-800 text-white p-4 text-center">
         <p>Follow us on Twitter: <a href="https://twitter.com/StandardTesting" class="text-blue-400 hover:text-blue-700" target="_blank">@StandardTesting</a></p>
-        <p>Visit our website: <a href="http://standardtesting.io" class="text-blue-400 hover:text-blue-700" target="_blank">standardtesting.io</a></p>
+        <p>Visit our website: </p>
     </footer>
 </body>
 </html>
