add everyday life sections

--- a/lecture1.html
+++ b/lecture1.html
@@ -47,16 +47,73 @@
             <h3>Differences Between AI and ML</h3>
             <p>While AI is a broader concept concerning creating machines capable of performing tasks that seem intelligent, ML is a specific subset of AI that trains a machine how to learn. ML is one way to achieve AI.</p>
         </section>
-        <div class="images-section-small">
-            <img src="./images/peterson2.png" alt="AI imagined graph 2" class="lecture-image">
-        </div>
         <section class="additional-materials">
-            <h2>Additional Materials</h2>
+            <h1>Additional Materials</h1>
             <ul>
                 <li><a href="https://www.youtube.com/watch?v=OQQ-W_63UgQ">
                     Stanford University School of Engineering 2017</a> - Lecture 1 | Natural Language Processing with Deep Learning: A foundational lecture on Natural Language Processing which serves as the start of the story we want to explore.  </li>
             </ul>
         </section>
+        <section>
+            <h1>Everyday Life Encounters with Embedded Machine Learning and Deep Learning Technologies</h1>
+        <p>In today's digital age, machine learning, deep learning, and large language models are integral to a vast array of technologies that people encounter every day. These technologies have been seamlessly integrated into products and services across various industries, enhancing user experiences and providing personalized content. Here are some common examples that many people interact with on a daily basis:</p>
+        </section>
+        <section>
+            <h2>Smart Personal Assistants</h2>
+            <p><strong>Examples:</strong> Siri, Alexa, Google Assistant.</p>
+            <img src="./images/smart-personal-assistants.png" alt="Smart Personal Assistants" class="section-image">
+            <p><strong>Technology:</strong> These devices use NLP powered by large language models to understand and respond to spoken commands.</p>
+        </section>
+        <section>
+            <h2>Recommendation Systems</h2>
+            <p><strong>Examples:</strong> Netflix, Spotify, Amazon.</p>
+            <img src="./images/recommendation-systems.png" alt="Recommendation Systems" class="section-image">
+            <p><strong>Technology:</strong> Machine learning algorithms suggest content based on user behavior and preferences.</p>
+        </section>
+        <section>
+            <h2>Social Media Feeds</h2>
+            <p><strong>Examples:</strong> Facebook, Instagram, Twitter.</p>
+            <img src="./images/social-media-feeds.png" alt="Social Media feeds" class="section-image">
+            <p><strong>Technology:</strong> Algorithms personalize feeds and moderate content using ML techniques.</p>
+        </section>
+        <section>
+            <h2>Email Spam and Phishing Detection</h2>
+            <p><strong>Examples:</strong> Gmail, Outlook.</p>
+            <img src="./images/spam-detection.png" alt="Email Spam and Phishing Detection" class="section-image">
+            <p><strong>Technology:</strong> Deep learning models identify and filter out unwanted emails.</p>
+        </section>
+        <section>
+            <h2>Autonomous Vehicles</h2>
+            <p><strong>Examples:</strong> Tesla Autopilot, Google Waymo.</p>
+            <img src="./images/autonomous-vehicles.png" alt="Autonomous Vehicles" class="section-image">
+            <p><strong>Technology:</strong> Deep learning processes sensor data for safe navigation.</p>
+        </section>
+        <section>
+            <h2>Facial Recognition Systems</h2>
+            <p><strong>Examples:</strong> iPhone Face ID, Surveillance Systems.</p>
+            <p><strong>Technology:</strong> CNNs are utilized for tasks such as secure authentication.</p>
+        </section>
+        <section>
+            <h2>Voice-to-Text Services</h2>
+            <p><strong>Examples:</strong> Voice typing on Google Docs, Real-time captioning on YouTube.</p>
+            <p><strong>Technology:</strong> Speech recognition converts spoken language into text.</p>
+        </section>
+        <section>
+            <h2>Customer Service Chatbots</h2>
+            <p><strong>Examples:</strong> Chatbots on banking websites, customer support on e-commerce sites.</p>
+            <p><strong>Technology:</strong> Chatbots understand and process customer inquiries using NLP.</p>
+        </section>
+        <section>
+            <h2>Sentiment Analysis</h2>
+            <p><strong>Examples:</strong> Product reviews, market research.</p>
+            <p><strong>Technology:</strong> ML models analyze text to gauge public sentiment.</p>
+        </section>
+        <section>
+            <h2>Healthcare Diagnostics</h2>
+            <p><strong>Examples:</strong> Radiology imaging, predictive diagnostics.</p>
+            <p><strong>Technology:</strong> Deep learning models assist in diagnosing and predicting patient outcomes.</p>
+        </section>
+        <img src="./images/peterson2.png" alt="AI imagined graph 2" class="lecture-image">
     </main>
     <footer class="bg-gray-800 text-white p-4 text-center">
         
