--- a/scripts/slides/numerical_vectors.html
+++ b/scripts/slides/numerical_vectors.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <header class="bg-gray-800 text-white p-4 text-center">
-        <h1>Understanding Two-Dimensional Vectors and Matrices</h1>
+        <h1>Understanding Vectors and Matrices</h1>
     </header>
     <main class="p-4">
         <section>
