--- a/lecture6.html
+++ b/lecture6.html
@@ -30,7 +30,7 @@
                 <li><a href="lecture5.html" class="text-blue-400">Lecture 5</a></li>
             </ul>
         </nav>
-        <h1>Lecture 6: Introduction to Text Embedded in Vector Spaces</h1>
+        <h1>Lecture 6: Introduction to Text Embeddings in Vector Spaces</h1>
     </header>
 
     <body>
