--- a/schedule.html
+++ b/schedule.html
@@ -51,7 +51,7 @@
             </div>
             <!-- Week 6 -->
             <div class="bg-white shadow-md rounded-lg p-4">
-                <h3 class="text-md font-semibold">Week 6: Introduction to Character-Level Language Modeling with PyTorch
+                <h3 class="text-md font-semibold">Week 6: Introduction to Text Embeddings in Vector Spaces
                 </h3>
                 <a href="lecture6.html" class="text-blue-500 hover:text-blue-700">View Details</a>
             </div>
