--- a/schedule.html
+++ b/schedule.html
@@ -35,7 +35,7 @@
             </div>
             <!-- Week 3 -->
             <div class="bg-white shadow-md rounded-lg p-4">
-                <h3 class="text-md font-semibold">Week 3: Key Concepts in Machine Learning</h3>
+                <h3 class="text-md font-semibold">Week 3: Historical Timeline of Machine Learning</h3>
                 <a href="lecture3.html" class="text-blue-500 hover:text-blue-700">View Details</a>
             </div>
             <!-- Week 4 -->
