--- a/lecture1.html
+++ b/lecture1.html
@@ -50,6 +50,10 @@
         <section class="additional-materials">
             <h1>Additional Materials</h1>
             <ul>
+                <li><a href="https://www.youtube.com/watch?v=2IK3DFHRFfw">
+                    Generative AI in a Nutshell - how to survive and thrive in the age of AI</a> - Basically a full day AI course crammed into 18 mins of drawing & talking. Target audience: Everyone. </li>
+            </ul>
+            <ul>
                 <li><a href="https://www.youtube.com/watch?v=OQQ-W_63UgQ">
                     Stanford University School of Engineering 2017</a> - Lecture 1 | Natural Language Processing with Deep Learning: A foundational lecture on Natural Language Processing which serves as the start of the story we want to explore.  </li>
             </ul>
