--- a/lecture1.html
+++ b/lecture1.html
@@ -54,6 +54,10 @@
                     Generative AI in a Nutshell - how to survive and thrive in the age of AI</a> - Basically a full day AI course crammed into 18 mins of drawing & talking. Target audience: Everyone. </li>
             </ul>
             <ul>
+                <li><a href="https://www.youtube.com/watch?v=rURRYI66E54">
+                    AI Language Models & Transformers - Computerphile</a> - Presentation of GPT-2 and the Attention/Transformer mechanism from 2019</li>
+            </ul>
+            <ul>
                 <li><a href="https://www.youtube.com/watch?v=OQQ-W_63UgQ">
                     Stanford University School of Engineering 2017</a> - Lecture 1 | Natural Language Processing with Deep Learning: A foundational lecture on Natural Language Processing which serves as the start of the story we want to explore.  </li>
             </ul>
