add gradient descent

--- a/index.html
+++ b/index.html
@@ -28,8 +28,7 @@
         </section>
     </main>
     <footer class="bg-gray-800 text-white p-4 text-center">
-        <p>Follow us on Twitter: <a href="https://twitter.com/StandardTesting" class="text-blue-400 hover:text-blue-700" target="_blank">@StandardTesting</a></p>
-        <p>Visit our website: </p>
+        <p>Warm up video: <a href="https://www.youtube.com/watch?v=jHwHPyWkShk" class="text-blue-400 hover:text-blue-700" target="_blank">Bing Chat Behaving Badly - Computerphile</a></p>
     </footer>
 </body>
 </html>
