--- a/lecture3.html
+++ b/lecture3.html
@@ -6,94 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link href="https://cdn.tailwindcss.com" rel="stylesheet">
     <link rel="stylesheet" href="styles.css">
-    <title>Historical Timeline of Machine Learning</title>
-    <style>
-        /* General body styling */
-        body {
-            font-family: Arial, sans-serif;
-            /* Sets a clean, readable font */
-            line-height: 1.6;
-            /* Increases line spacing for readability */
-            color: #333;
-            /* Dark grey text for softer contrast */
-            background-color: #f4f4f4;
-            /* Light grey background */
-        }
-
-        nav ul {
-            list-style: none;
-            /* Removes list bullets */
-            padding: 0;
-        }
-
-        nav ul li {
-            display: inline;
-            /* Aligns links in a row */
-            margin-right: 10px;
-            /* Adds spacing between the links */
-        }
-
-        nav a {
-            color: #1abc9c;
-            /* Soft teal color for links */
-            text-decoration: none;
-            /* Removes underline from links */
-        }
-
-        nav a:hover {
-            text-decoration: underline;
-            /* Underlines links on hover for better visibility */
-        }
-
-        /* Main content area styling */
-        main {
-            padding: 20px;
-            /* Adds padding around the main content */
-            max-width: 960px;
-            /* Limits the width of the main content and centers it */
-            margin: 0 auto;
-        }
-
-        h1,
-        h2,
-        h3 {
-            color: #3498db;
-            /* Blue shades for headings for better hierarchy visibility */
-        }
-
-        /* Styling for sections and details within */
-        section {
-            background-color: #ffffff;
-            /* White background for sections */
-            border: 1px solid #dddddd;
-            /* Adds a subtle border */
-            padding: 15px;
-            /* Adds padding inside the sections */
-            margin-top: 20px;
-            /* Adds spacing between each section */
-        }
-
-        ul ul {
-            margin-left: 20px;
-            /* Indents nested lists */
-        }
-
-        strong {
-            color: #2c3e50;
-            /* Dark blue color for strong emphasis */
-        }
-
-        footer {
-            font-size: 0.8em;
-            /* Smaller font size for footer */
-        }
-        .section-image {
-    max-width: 40%;  /* Limits the image width to 50% of its container */
-   
-    margin: 10px auto;  /* Centers the image and provides some margin */
-    height: auto;  /* Keeps the aspect ratio of the image */
-}
-    </style>
+    <title>3: Historical Timeline of Machine Learning</title>
 </head>
 
 <body>
@@ -101,14 +14,14 @@
         <nav>
             <ul class="flex space-x-4">
                 <li><a href="index.html" class="text-blue-400">Home</a></li>
-                <li><a href="lecture1.html" class="text-blue-400">Lecture 1</a></li>
-                <li><a href="lecture2.html" class="text-blue-400">Lecture 2</a></li>
-                <li><a href="lecture4.html" class="text-blue-400">Lecture 4</a></li>
-                <li><a href="lecture5.html" class="text-blue-400">Lecture 5</a></li>
-                <li><a href="lecture6.html" class="text-blue-400">Lecture 6</a></li>
+                <li><a href="lecture1.html" class="text-blue-400">1</a></li>
+                <li><a href="lecture2.html" class="text-blue-400">2</a></li>
+                <li><a href="lecture4.html" class="text-blue-400">4</a></li>
+                <li><a href="lecture5.html" class="text-blue-400">5</a></li>
+                <li><a href="lecture6.html" class="text-blue-400">6</a></li>
             </ul>
         </nav>
-        <h1>Historical Timeline of Machine Learning</h1>
+        <h1>3: Historical Timeline of Machine Learning</h1>
     </header>
     <p></p>
     <main class="p-4">
