--- a/schedule.html
+++ b/schedule.html
@@ -62,8 +62,7 @@
         </div>
     </main>
     <footer class="bg-gray-800 text-white p-4 text-center">
-         <a href="http://standardtesting.io" class="text-blue-400 hover:text-blue-700"
-            target="_blank">standardtesting.io</a>
+        <p>Fun video: <a href="https://www.youtube.com/watch?v=GBtfwa-Fexc" class="text-blue-400 hover:text-blue-700" target="_blank">ChatGPT does Physics - Sixty Symbols</a></p>
     </footer>
 </body>
 
