--- a/lecture4.html
+++ b/lecture4.html
@@ -12,14 +12,14 @@
         <nav>
             <ul class="flex space-x-4">
                 <li><a href="index.html" class="text-blue-400">Home</a></li>
-                <li><a href="lecture1.html" class="text-blue-400">Lecture 1</a></li>
-                <li><a href="lecture2.html" class="text-blue-400">Lecture 2</a></li>
-                <li><a href="lecture3.html" class="text-blue-400">Lecture 3</a></li>
-                <li><a href="lecture5.html" class="text-blue-400">Lecture 5</a></li>
-                <li><a href="lecture6.html" class="text-blue-400">Lecture 6</a></li>
+                <li><a href="lecture1.html" class="text-blue-400">1</a></li>
+                <li><a href="lecture2.html" class="text-blue-400">2</a></li>
+                <li><a href="lecture3.html" class="text-blue-400">3</a></li>
+                <li><a href="lecture5.html" class="text-blue-400">5</a></li>
+                <li><a href="lecture6.html" class="text-blue-400">6</a></li>
             </ul>
         </nav>
-        <h1>Lecture 4: Machine Learning for Sequence Prediction</h1>
+        <h1> 4: Machine Learning for Sequence Prediction</h1>
     </header>
     <main class="p-4">
         <section>
