--- a/lecture6.html
+++ b/lecture6.html
@@ -9,13 +9,6 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Introduction to Vectors and Matrices</title>
-        <style>
-            body { font-family: Arial, sans-serif; padding: 20px; }
-            .slide { margin-bottom: 40px; }
-            h2 { color: #333; }
-            p { margin: 10px 0; }
-            img { max-width: 100%; height: auto; }
-        </style>
     </head>
 </head>
 <body>
@@ -23,18 +16,18 @@
         <nav>
             <ul class="flex space-x-4">
                 <li><a href="index.html" class="text-blue-400">Home</a></li>
-                <li><a href="lecture1.html" class="text-blue-400">Lecture 1</a></li>
-                <li><a href="lecture2.html" class="text-blue-400">Lecture 2</a></li>
-                <li><a href="lecture3.html" class="text-blue-400">Lecture 3</a></li>
-                <li><a href="lecture4.html" class="text-blue-400">Lecture 4</a></li>
-                <li><a href="lecture5.html" class="text-blue-400">Lecture 5</a></li>
+                <li><a href="lecture1.html" class="text-blue-400">1</a></li>
+                <li><a href="lecture2.html" class="text-blue-400">2</a></li>
+                <li><a href="lecture3.html" class="text-blue-400">3</a></li>
+                <li><a href="lecture4.html" class="text-blue-400">4</a></li>
+                <li><a href="lecture5.html" class="text-blue-400">5</a></li>
             </ul>
         </nav>
-        <h1>Lecture 6: Introduction to Text Embeddings in Vector Spaces</h1>
+        <h1> 6: Introduction to Text Embeddings in Vector Spaces</h1>
     </header>
 
     <body>
-        <div class="slide">
+        <main class="p-4">
             <h2>Introduction to Vectors</h2>
             <p>What is a Vector?</p>
             <ul>
@@ -83,8 +76,5 @@
                     Represent word vectors in Natural Language Processing</a>
             </ul>
         </section>
-    <footer class="bg-gray-800 text-white p-4 text-center">
-         
-    </footer>
 </body>
 </html>
